--- a/src/app/fcomponents/basic/user-dialog/terms-conditions/terms-conditions.component.html
+++ b/src/app/fcomponents/basic/user-dialog/terms-conditions/terms-conditions.component.html
@@ -2,10 +2,157 @@
 <div id="LogoWrap">
   <img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="100px">
   <hr>
-  <h5 mat-dialog-title>Terms&Conditions</h5>
-  <mat-dialog-content>
-    Welcome to Luxe Dream.
-  </mat-dialog-content>
+  <h5 mat-dialog-title>Luxe Dream Event Hire Rental Agreement</h5>
+  <mat-dialog-content class="s2">
+    Upon full payment and delivery/collection of Luxe Dream Event Hire rented items, the customer agrees to all terms and conditions shown in this rental agreement.
+    <br><br>
+    <h4>RESPONSIBILITIES</h4>
+    <br>
+    <h5>CUSTOMER RESPONSIBILITY & SAFETY</h5>
+      <ol>
+        <li>To ensure the item[s] is/are fully respected, the customer is responsible for the behaviour and safety of their event guests at all times.</li>
+        <li>The customer is responsible for ensuring the Luxe Dream Event Hire item[s] is/are prevented from abuse or damage.</li>
+        <li>Any damage to the venue property incurred during the hire period of a Luxe Dream Event Hire item or items is to the cost of the customer.</li>
+        <li>Any lost Luxe Dream Event Hire items will be charged at a replacement cost and is to the cost of the customer.</li>
+        <li>The customer is responsible for ensuring onsite representatives are made fully aware of all obligations from this rental agreement and additional item rules provided by Luxe Dream Event Hire. The customer is responsible for ensuring all guests are aware of any necessary safety issues and/or hazards surrounding the hired items from Luxe Dream Event Hire.</li>
+      </ol>
+      <br>
+    <h5>ADDITIONAL RULES FOR SPECIFIC ITEMS</h5>
+    Luxe Dream Event Hire will provide additional rules and/or hire agreement terms for certain items hired (e.g. Bouncy Castle), which must be followed by the customer.
+    <br>
+    <h5>LUXE DREAM EVENT HIRE RESPONSIBLITES</h5>
+    Subject to the terms of this agreement, we will provide to you the selected item[s], between the stated start and finish dates and times.
+    <br>
+    <br>
+    <h4> PAYMENT DETAILS    </h4>
+      <h5>PAYMENT</h5>
+      <ol>
+        <li>All rental item prices are inclusive of 15% GST .</li>
+        <li>Customers are asked to make all payments to Luxe Dream Event Hire via bank transfer. Bank details will be
+          provided on the individual customer invoice. </li>
+        <li>The remaining balance is to be paid on or before the day of item collection and/or delivery.</li>
+        <li>Additional delivery charges may apply, and these will be provided on the individual customer invoice.</li>
+        <li>Should the customer be given a discount, this will be stated on the individual customer invoice.</li>
+
+      </ol>
+
+      <br>
+      <h5>DEPOSIT</h5>
+      <ol>
+        <li>Customers are required to provide a deposit to secure their item[s], which is calculated at 50% per rented item, which is inclusive of GST.</li>
+        <li>The deposit due date is provided on the individual customer invoice.</li>
+        <li>On payment of the deposit, Luxe Dream Event Hire will keep an item available for the customer for their
+          specified event date</li>
+
+      </ol>
+      <br><br>
+      <h5>BOND</h5>
+      <ol>
+        <li>Bond calculation as percentage of the total rent (before any discounts). Customers are asked to provide a minimum bond of $150.00 NZD and maximum bond setting at $500.00 NZD. Within $250.00 NZD, the bond will be $150.00 NZD; between $250.00 NZD and $750.00 the bond would be $300.00 NZD; ABOVE $750.00 NZD, the bond would be $500.00 NZD.</li>
+        <li>The bond price may vary depending on the item or quantity of items the customer wishes to hire. The bond price will be outlined on each individual invoice.</li>
+        <li>The bond will be returned within three working days given the item[s] has/have been returned and inspected to ensure that it/they has/have not been soiled or damaged.</li>
+
+      </ol>
+      <br>
+
+      <h4>RENTAL ARRANGEMENTS</h4>
+        <h5>ITEM RENTAL PERIOD</h5>
+        <ol>
+          <li>The rental period for an item is 3 days</li>
+          <li>Customers may request to rent an item for 1 day only, but the price remains the same as a 3-day hire period.</li>
+          <li>If the customer wishes to extend the number of rental days past 3 days, the customer will be charged 35% of
+            the item fee [inclusive of GST], per additional day. The same charge applies if the item[s] is/are returned late.</li>
+          <li>Pick up on Friday between 10am and 2pm; then return on the next following Monday between 10am and 2pm.
+            If a public holiday should fall on a Monday, the Hirer must return their hired items on Tuesday. If a public holiday should fall on a Friday, the Hirer is to pick up their hired items on Thursday. If the hirer rent the items during weekdays. All products are hired out on a 2-day hire basis. For example, Monday to Wednesday or Tuesday to Thursday. If you wish to extend the rental days to One week, you will only be charged for twice the price of the weekend’s rental (from Friday to Monday) fee.</li>
+
+        </ol>
+        <br>
+        <h5>COLLECTION</h5>
+        <ol>
+          <li>Customer collection is located at 21 ASHWOOD AVENUE, DAIRY FLAT, 0792. More detailed instructions will be provided prior to the arranged collection/delivery date.</li>
+          <li>Customers are required to collect their item[s] on a Friday between 10am and 2pm and return their item[s] on the following Monday between 10am and 2pm, unless alternative arrangements are made between the customer and Luxe Dream Event Hire. Alternative collection days are possible if the item is priced at $50.00 or above.</li>
+          <li>Customers must check that they are happy with their item[s] and notify Luxe Dreams Event Hire at the time of collection if they observe any prior damage to their item[s].</li>
+        </ol>
+        <br>
+        <h5>DELIVERY</h5>
+        <ol>
+          <li>Delivery charges are calculated from 21 ASHWOOD AVENUE, DAIRY FLAT, 0792.</li>
+          <li>The delivery (Delivery and Pick-up) charge exclude GST, starting from $100.00NZD for the North Shore, West
+            Auckland, Auckland City and Middle Auckland for $150.00NZD; East Auckland for $200.00NZD. For more
+            information, please email us to disscuss.</li>
+          <li>A distance of 20km or under. If further than 20km, customers will be charged an additional $1.00 per km. The
+            delivery charge is provided on the individual customer invoice.</li>
+          <li>Please note that the prices quoted on the Luxe Dream Event Hire website do not include a delivery fee,
+            unless stated otherwise</li>
+          <li>Please note that some items are for delivery only. Please see the website [luxedreameventhire.co.nz] for
+            details on the items that are for delivery only</li>
+            <li>Help with item set-up is NOT included in the delivery charge. Delivery take place from door-to-door.</li>
+            <li>Customers must check that they are happy with their item[s] and notify Luxe Dreams Event Hire at the time of
+              delivery if they observe any prior damage to their item[s].</li>
+        </ol>
+        <br><br>
+        <h4>CANCELLATION POLICY</h4>
+        <h5>CUSTOMER CANCELLATION</h5>
+        Email: info@luxedreameventhire.co.nz
+        <br>
+        If the customer wishes to cancel hiring their rental item[s], they must inform Luxe Dream Event Hire as soon as possible, in writing, in order to be eligible for a refund. Refunds are as follows:
+        <ol>
+          <li>If the customer cancels three weeks before the collection/delivery date, they will be provided with: a full refund.</li>
+          <li>If the customer cancels between one to three weeks before the collection/delivery date, they will be provided with: a refund of 50% of their deposit.</li>
+          <li>If the customer cancels less than one week before the collection/delivery date, they will be provided with: no refund.</li>
+
+        </ol>
+        <br>
+        <h5>LUXE DREAMS CANCELLATION</h5>
+        <ol>
+          <li>
+            Luxe Dream Event Hire reserves the right to cancel item collection/delivery should they consider that the customer is unsuitable to take care of the item[s] properly.
+        </li>
+        <li>Luxe Dream Event Hire reserves the right to cancel item collection/delivery should a previous customer return the item in a damaged condition, leaving the item unfit for the next customer.</li>
+      </ol>
+      <br>
+      <h5>RESCHEDULING OF HIRE DATE</h5>
+      <ol>
+        <li>There is no charge to the customer for changing the date of their event, on the basis that Luxe Dreams have the item[s] available on the new date.</li>
+        <li>Luxe Dreams must be informed 3 days prior to the collection/delivery date if the customer wishes to change their collection/delivery date.</li>
+        <li>Customers may change the date of their event up to three times.</li>
+      </ol>
+
+      <br><br>
+
+      <h4>CARE OF ITEMS</h4>
+      <br>
+      <h5>CLEANING</h5>
+      <ol>
+        <li>
+          Luxe Dream Event Hire items are expected to be returned in the same condition as they were collected/delivered.
+        </li>
+        <li>All items must be cleaned properly before returning to Luxe Dream Event Hire.</li>
+      </ol>
+
+      <h5>SOILED AND/OR DAMAGED ITEMS</h5>
+      <ol>
+        <li>Customers will be charged 25% of their bond if an item is returned in a soiled condition.</li>
+        <li>Customers will be charged part or all of their bond if an item is returned damaged. The bond deduction will be
+          determined by Luxe Dream Event Hire, depending on the extent of the damage.</li>
+        <li>Customers must inform Luxe Dream Event Hire if they are aware of any damage to an item.</li>
+        <li>Any lost Luxe Dream Event Hire items will be charged at a replacement cost and is to the cost of the
+          customer.</li>
+      </ol>
+      <br>
+      <h4>ADDITIONAL INFORMATION </h4>
+      <h5>COLLABORATION</h5>
+      Luxe Dream Event Hire is happy to work alongside another event planning company.
+      <br>
+      <h5>EVENT PLANNING</h5>
+      Luxe Dream Event Hire also provides high quality event planning. Please enquire if this is something you may be interested in.
+  
+      <br><br>
+
+      <h4>DISCLAIMER</h4>
+      This rental agreement forms the sole agreement between the customer and Luxe Dream Event Hire. The customer agrees to indemnify and hold Luxe Dream Event Hire harmless for any claims from the customer’s use or misuse, 
+      including any third parties for loss, injury and damage to persons or items/property arising out of the customers negligence or operation including legal costs incurred in defence of such claims.
+    </mat-dialog-content>
 </div>
 
 <button mat-raised-button color="basic" style="margin: 0 auto;" mat-dialog-close>ok</button>
