--- a/src/styles.css
+++ b/src/styles.css
@@ -115,6 +115,7 @@ body{
 .s1 {
   font-family: 'RobotoThin', serif;
   font-size: 20px;
+  font-size: 1.5vw;
   font-weight: 400;
   color: #535353;
 }
@@ -147,11 +148,12 @@ body{
   color: #535353;
 }
 
-.s2bold {
+.s2 {
   font-family: 'RobotoThin', serif;
   font-size: 17px;
+  font-size: 1.5vw;
+  font-weight: 450;
   color: #535353;
-  font-weight: 700;
 }
 
 .s2gold {
