--- a/src/app/fcomponents/basic/footer/footer.component.css
+++ b/src/app/fcomponents/basic/footer/footer.component.css
@@ -42,6 +42,7 @@ a{
     font-size: 12px;
     padding: 3px 0 10px 0;
     font-weight: 600;
+    color: #404040
 }
 .footer-icon {
     min-width: 20px;
