--- a/src/app/fcomponents/basic/user-dialog/terms-conditions/terms-conditions.component.html
+++ b/src/app/fcomponents/basic/user-dialog/terms-conditions/terms-conditions.component.html
@@ -3,7 +3,7 @@
   <img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="100px">
   <hr>
   <h5 mat-dialog-title>Luxe Dream Event Hire Rental Agreement</h5>
-  <mat-dialog-content class="s2">
+  <mat-dialog-content style="font-size:14px;" class="s2">
     Upon full payment and delivery/collection of Luxe Dream Event Hire rented items, the customer agrees to all terms and conditions shown in this rental agreement.
     <br><br>
     <h4>RESPONSIBILITIES</h4>
