--- a/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.html
@@ -86,6 +86,33 @@
          [ngClass]="{'is-invalid':streetAddress.errors?.required && streetAddress.touched}"
          [(ngModel)]="userInfo.streetAddress" #streetAddress="ngModel">
    </div>
+   
+
+
+   <!-- <div class="form-group ">
+      <div class="invalid_feedback" *ngIf="streetAddress.errors?.required && streetAddress.touched">
+         Please enter
+         your street address</div>
+      <div class="invalid_feedback" *ngIf=" streetAddress.errors?.minlength && streetAddress.touched ">
+         Please enter a corrct address.
+      </div>
+      <input class="form-control s2" type="streetAddress" [disabled]="!isShoppingCartValid" required minlength="2"
+         name="streetAddress" placeholder="Event street address"
+         [ngClass]="{'is-invalid':streetAddress.errors?.required && streetAddress.touched}"
+         [(ngModel)]="userInfo.streetAddress" #streetAddress="ngModel">
+   </div> -->
+   <mat-form-field class="regionform">
+      <mat-label>How did you find us</mat-label>
+      <mat-select required  [(ngModel)]="userInfo.howFoundUs" #howFoundUs="ngModel" name="howFoundUs" >
+         <mat-option value="google">Google search</mat-option>
+         <mat-option value="facebook">Facebook</mat-option>
+         <mat-option value="instagram">Instagram</mat-option>
+         <mat-option value="youtube and tiktok">Youtube & TikTok</mat-option>
+         <mat-option value="friend referral">Friend referral</mat-option>
+      </mat-select>
+   </mat-form-field>
+
+
    <br>
    <!--pick up or delivery-->
    <mat-radio-group [disabled]="!isShoppingCartValid" required aria-label="Select an option">
@@ -109,31 +136,33 @@
       <mat-error *ngIf="districtError && isShoppingCartValid">Please select a region</mat-error>
    </div>
    <br>
-   <mat-form-field class="timeform">
-      <mat-label>Select a desired pick-up/delivery time</mat-label>
-      <mat-select required (selectionChange)="selectionChangeTime($event)">
-         <mat-option value="9:00 am - 11:00 am">9:00 am - 11:00 am</mat-option>
-         <mat-option value="11:00 am - 2:00 pm">11:00 am - 2:00 pm</mat-option>
-         <mat-option value="2:00 pm - 5:00 pm">2:00 pm - 5:00 pm</mat-option>
-      </mat-select>
-   </mat-form-field>
-   <mat-error *ngIf="timeError && isShoppingCartValid">Please select a time for pick-up/delivery </mat-error>
-   <br>
-   <mat-form-field class="timeform">
-      <mat-label>Select a desired return time</mat-label>
-      <mat-select required (selectionChange)="selectionChangeReturnTime($event)">
-         <mat-option value="9:00 am - 11:00 am">9:00 am - 11:00 am</mat-option>
-         <mat-option value="11:00 am - 2:00 pm">11:00 am - 2:00 pm</mat-option>
-         <mat-option value="2:00 pm - 5:00 pm">2:00 pm - 5:00 pm</mat-option>
-      </mat-select>
-   </mat-form-field>
-   <mat-error *ngIf="timeReturnError && isShoppingCartValid">Please select a time for return </mat-error>
+   <div *ngIf="userInfo.isPickup == '0'">
+         <mat-form-field class="timeform">
+            <mat-label>Select a desired delivery time</mat-label>
+            <mat-select required (selectionChange)="selectionChangeTime($event)">
+               <mat-option value="9:00 am - 11:00 am">9:00 am - 11:00 am</mat-option>
+               <mat-option value="11:00 am - 2:00 pm">11:00 am - 2:00 pm</mat-option>
+               <mat-option value="2:00 pm - 5:00 pm">2:00 pm - 5:00 pm</mat-option>
+            </mat-select>
+         </mat-form-field>
+         <mat-error *ngIf="timeError && isShoppingCartValid">Please select a time for pick-up/delivery </mat-error>
+         <br>
+         <mat-form-field class="timeform">
+            <mat-label>Select a desired delivery pick up time</mat-label>
+            <mat-select required (selectionChange)="selectionChangeReturnTime($event)">
+               <mat-option value="9:00 am - 11:00 am">9:00 am - 11:00 am</mat-option>
+               <mat-option value="11:00 am - 2:00 pm">11:00 am - 2:00 pm</mat-option>
+               <mat-option value="2:00 pm - 5:00 pm">2:00 pm - 5:00 pm</mat-option>
+            </mat-select>
+         </mat-form-field>
+         <mat-error *ngIf="timeReturnError && isShoppingCartValid">Please select a time for return </mat-error>
+   </div>
    <hr>
    <!-- Message -->
    <div class="form-group">
       <textarea class="form-control s2" [disabled]="!isShoppingCartValid" rows="5" type="Message" name="Message"
          placeholder="Send a message:" [(ngModel)]="userInfo.Message" #Message="ngModel">
-                      </textarea>
+      </textarea>
    </div>
    <br>
    <div>
