--- a/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
+++ b/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
@@ -46,7 +46,12 @@
 				</a>
 
 			</li>
-
+			<li class="nav-item">
+				<a class="nav-link" id="8" routerLink='/admin/video'>
+					<i class="fas fa-users"></i>
+					Video
+				</a>
+			</li>
 		</ul>
 	</div>
 </nav>
