--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -2,11 +2,11 @@
   <div class="row">
 	  
     <!-- !sidebar -->
-    <div class="col-md-2 d-none d-md-block bg-light sidebar py-5">
+    <div class="col-md-1 d-none d-md-block bg-light sidebar">
       <app-admin-sideBar></app-admin-sideBar>
     </div>
 
-    <main role="main" class="col-md-10 ml-sm-auto col-lg-10">
+    <main role="main" class="col-md-11 ml-sm-auto">
       
         <router-outlet></router-outlet>
 
