--- a/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
+++ b/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
@@ -44,8 +44,15 @@
 					<i class="fas fa-users"></i>
 					Users
 				</a>
-
 			</li>
+
+			<li class="nav-item">
+				<a class="nav-link" id="8" routerLink='/admin/admincontactlist'>
+					<i class="fas fa-users"></i>
+					Contacts
+				</a>
+			</li>
+
 			<li class="nav-item">
 				<a class="nav-link" id="8" routerLink='/admin/video'>
 					<i class="fas fa-users"></i>
