--- a/src/app/fcomponents/payment-options/payment-options.component.html
+++ b/src/app/fcomponents/payment-options/payment-options.component.html
@@ -2,9 +2,9 @@
 <div class="ml-4" style="font-size:30px">Credit Cards </div>
 <div class="row mx-5" >
   <div class="col-lg-3 col-sm-6 col-xs-12">
-    <a href="https://www.jcb.com/" (click)="pay()" target="_blank">
+    <!-- <a href="https://www.jcb.com/" (click)="pay()" target="_blank"> -->
       <img src="../../../assets/images/JCBLogo.png" alt="JCB" style="width:150px;">
-    </a>
+    <!-- </a> -->
   </div>
   <div class="col-lg-3 col-sm-6 col-xs-12">
   <a href="https://www.mastercard.co.nz/en-nz.html" target="_blank">
