--- a/src/app/fcomponents/user-dashboard/manage-password/manage-password.component.html
+++ b/src/app/fcomponents/user-dashboard/manage-password/manage-password.component.html
@@ -34,7 +34,7 @@
 				<mat-error *ngIf="confirmpassword.invalid">{{getErrorMessage3()}}</mat-error>
 			</mat-form-field>
 			
-			<div *ngIf="this.changePasswdForm.valid && signupFailed" class="alert alert-danger text-center">
+			<div *ngIf="this.changePasswdForm.valid " class="alert alert-danger text-center">
 				{{ errorMessage }}
 			</div>
 			<button type="submit" mat-raised-button class="primaryButton mt-3">Submit</button>
