--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 
+<div *ngIf="isBrowser">
 
 <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
-
+    <router-outlet></router-outlet>
 <app-footer></app-footer>
+</div>
 
 <ngx-json-ld [json]="schema"></ngx-json-ld>
