--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -126,9 +126,8 @@
     </div>
 
     <!-- styling -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-12 col-md-6" style="height:550px;">
-        <!-- <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"class=" d-block ml-auto " style="position: absolute;clip: rect(0px,auto,500px,0px);"> -->
         <img src="../../../../assets/images/465b91cc5e0f427019fb4363fe65023d.jpg" style="height:100%;width:100%;" />
       </div>
       <div class="col-12 col-md-6">
@@ -143,10 +142,97 @@
         <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" routerLink="/services">View our
           services</button>
       </div>
+    </div> -->
+
+
+
+    <div class="row">
+      <div class="col-12 col-md-6" style="height:550px;">
+        <img src="../../../../assets/images/465b91cc5e0f427019fb4363fe65023d.jpg" style="height:100%;width:100%;" />
+      </div>
+      <div class="col-12 col-md-6">
+        <div class="d-none d-md-block"><br><br></div>
+        <h1 class="l2 mt-1 lspace-5">Event Hire Specialists</h1>
+        <div class="my-3 s2">
+          Luxe Dream Event Hire is all about <span style="font-family: 'LuxeDream'">luxury…</span>
+          <br>
+          The <span style="font-family: 'LuxeDream'">luxury</span> of hiring props, making your event a little grander than normal…
+          <br>
+          The <span style="font-family: 'LuxeDream'">luxury</span> of having our professionals step in to help style your unique event…
+          <br>
+          The <span style="font-family: 'LuxeDream'">luxury</span> of being surrounded by beautiful exclusive floral pieces…
+          <br><br>
+          Whether your celebrating a wedding, engagement, birthday, baby shower, corporate gathering or any other special event, we’re here to make it a unique day to remember.
+          <br><br>
+          Our professional services include: <span style="font-family: 'LuxeDream'">Prop Hire, Event Styling & Floral Decoration</span>. 
+        </div>
+    </div>
+    </div>
+    <br>
+    <div class="row ">
+      <div class="col-12 col-md-6 pt-md-4 order-1 order-md-0">
+        <div class="d-none d-md-block"><br><br></div>
+        <h1 class="l2  lspace-5">Floral Decoration</h1>
+      
+        <div class="my-3 s2">
+          Luxe Dream Floral Studio specialise in flowering weddings and events. <br>
+          With our knowledge and understanding of floral availability, designs and colour palettes, our florists can create beautiful blooms, both artificial and fresh.
+          <br><br>
+          We design ceremony flowers including bridal bouquets, bouquets for bridesmaids, flower girls and page boys, lapel flowers, corsages and ceremony aisle and chair decorations.
+          <br><br>
+          We design reception flowers including floral table and chair decorations, centrepiece bouquets and special bridal table decorations.
+        </div>
+        <button type="button" class="btn btn-outline-gold my-md-3 lspace-3" routerLink="/services/2/49">View our floral studio</button>
+      </div>
+      <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img
+          src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
+    </div>
+    <br>
+    <div class="row ">
+      <div class="col-12 col-md-6" style="height:550px;">
+        <img src="../../../../assets/images/465b91cc5e0f427019fb4363fe65023d.jpg" style="height:100%;width:100%;" />
+      </div>
+      <div class="col-12 col-md-6">
+        <div class="d-none d-md-block"><br><br></div>
+        <h1 class="l2 lspace-5">Prop Hire</h1>
+        <div class="my-3 s2">
+          Luxe Dream Event Hire offer competitive prices and high-quality rental equipment.
+          <br>
+          We have a wide range of props for hire that will put a personal touch on your event and if you wish to personalise further, our team can make this happen.
+          <br><br>
+          What’s more, our Floral Studio can add beautiful decorative pieces to your chosen props, which will really make them stand out…
+        </div>
+        <br>
+        <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" routerLink="/products/1/0">View our props</button>
+      </div>
+    </div>
+    <br>
+    <div class="row ">
+      <div class="col-12 col-md-6 pt-md-4 order-1 order-md-0">
+        <div class="d-none d-md-block"><br></div>
+        <h1 class="l2 lspace-5">Event Styling</h1>
+        <div class="my-3 s2">
+          Luxe Dream Event Hire will plan, create and deliver styling that is unique to your event.<br>
+          Whether it be a seasonal, musical, religious or milestone event, we have you covered.<br>
+          We will work alongside you to bring your vision to life and help create an inspiring and memorable celebration for all.
+          <br><br>
+          We specialise in Wedding Styling and would love to help make your special day unforgettable.<br>
+          From wedding ceremonies to receptions, we can create an atmosphere that is both exclusive and enchanting for you and your guests…<br>
+          <button type="button" class="btn btn-outline-gold my-md-3 lspace-3" routerLink="/services/2/0">View our services</button>
+          <br>
+          Luxe Dream Event Hire also have a selection of packages that make it simple for you to plan an event promptly while saving pennies at the same time.
+          <br>
+          <button type="button" class="btn btn-outline-gold my-md-3 lspace-3" routerLink="/packages">View our packages</button>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img
+          src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
     </div>
 
+
+
     <!-- CORPORATE EVENTS -->
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
       <div class="col-12 col-md-6 pt-md-4 order-1 order-md-0">
         <div class="d-none d-md-block"><br><br></div>
         <h1 class="l2 mt-5 lspace-5">Our event packages</h1>
@@ -158,11 +244,9 @@
         <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" routerLink="/packages">View our
           packages</button>
       </div>
-      <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
-              clip: rect(0px,auto,500px,0px);"></div> -->
       <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img
           src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
-    </div>
+    </div> -->
   </div>
 
   <!-- scrolling background -->
