--- a/src/app/fcomponents/shopping-checkout/shopping-checkout.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-checkout.component.html
@@ -8,27 +8,41 @@
     <div class="col-lg-8 col-12">
       <!-- Disclaimer Content -->
       <div class="s3">
-        <b>If you would like to confirm your order, please click the submit button. Once we confirm your payments, the
-          props will hold on your event date.</b>
+        <b>If you are ready to confirm your order, please click the submit button.<br>
+          Once we confirm your payment, the prop[s] will be reserved for your event date.</b>
         <br>
-        We will send you the Final Invoice before the event date (paid by Eftpos or Bank transfer). A
-        bond is payable on all hire props, starting from $150.00, it will be increased depends on the
-        value of the props you have hired. Bonds are fully refundable once return the props in original condition minus
-        fair wear and tear*.
+        We will send you your Final Invoice before your event date (to be paid please by Eftpos or Bank Transfer).
+        <br>
+        A bond is payable on all hire props, starting from $150.00 and will be increased depending on the value of props that you hire. Bonds are fully refundable once the prop[s] is/are returned in their original condition, minus fair wear and tear.
         <br><br>
-        <b>No minimum spending is required if you would like to hire on weekends (please note: you must return products
-          on the Monday).</b>
-        The minimum spending is $50.00 if you hire between Tuesday and Thursday.
+        The minimum hire spending price is $50.00 if you wish to hire items between Tuesdays and Thursdays.
         <br>
-        <b>Pick-up and Return time*:</b>
+        There is no minimum hire spending price on weekends, as long as props are returned by the following Monday.
+        <br><br>
+        <b>Pick-up and Drop-off Times:</b>
         <br>
         Pick-up: Friday 10:00-2:00
         <br>
         Return: Monday 10:00-2:00
         <br><br>
-        <b>Please let us know if you wish to pick up outside of our normal working hours.</b>
+        <b>Please let us know if you wish to pick up your prop[s] outside of normal working hours.</b>
         <br><br>
 
+        <b>Pick-up and Drop-off Address:</b>
+          <br>
+        21 Ashwood Avenue, Dairy Flat, &nbsp;  0792
+        <br><br>
+        
+        Please note:  <br>
+        
+        	Prices listed on our website include GST.<br>
+        	The standard hire period on all items is 3 calendar days.<br>
+        	We ask that you clean your prop[s] before returning it/them to us (e.g. marks, fingerprints, stickers) otherwise there will be a $25.00 cleaning fee charge.
+        
+
+
+
+<!-- 
         <b> Please note:<br>
 
           *Prices listed on the website include GST.
@@ -36,7 +50,7 @@
           *The standard hire period on all items is 3-calendar-day.
           <br>
           *Please make sure you have cleaned the props before you return (eg. stickers, lines, </b>
-        <br><br>
+        <br><br> -->
         <!-- If you have any questions please contact the team on :<br> -->
         <!-- Phone: 021 087 93899<br>
 Email: info@luxedreameventhire.co.nz<br> -->
