--- a/src/app/fcomponents/admin/admin-dialogs/profile-dialog/profile-dialog.component.html
+++ b/src/app/fcomponents/admin/admin-dialogs/profile-dialog/profile-dialog.component.html
@@ -13,33 +13,36 @@
 	<form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
 		<div class="row">
 			<div class="col-6">
+				<div style="color:red;" *ngIf="errorMessage">{{errorMessage}}</div>
 				<mat-form-field>
 					<input matInput class="form-control" formControlName="firstName" placeholder="First Name">
-					<mat-error *ngIf="firstName.invalid">{{getErrorMessagefname()}}</mat-error>
+					<!-- <mat-error *ngIf="firstName.invalid">{{getErrorMessagefname()}}</mat-error> -->
 				</mat-form-field>
-	
+
 				<mat-form-field>
 					<input matInput matInput class="form-control" formControlName="lastName" placeholder="Last Name">
-					<mat-error *ngIf="lastName.invalid">{{getErrorMessageLname()}}</mat-error>
+					<!-- <mat-error *ngIf="lastName.invalid">{{getErrorMessageLname()}}</mat-error> -->
 				</mat-form-field>
-				
+
 				<mat-form-field>
 					<input matInput class="form-control" formControlName="email" placeholder="Email Address">
 				</mat-form-field>
-	
+
 				<mat-form-field>
 					<input matInput class="form-control" formControlName="phoneNumber" placeholder="Phone No.">
-					<mat-error *ngIf="phoneNumber.invalid">{{getErrorMessagePhone()}}</mat-error>
+					<!-- <mat-error *ngIf="phoneNumber.invalid">{{getErrorMessagePhone()}}</mat-error> -->
 				</mat-form-field>
-	
+
 				<mat-form-field>
 					<input matInput class="form-control" formControlName="company" placeholder="Company">
-					<mat-error *ngIf="company.invalid">{{getErrorMessageCom()}}</mat-error>
+					<!-- <mat-error *ngIf="company.invalid">{{getErrorMessageCom()}}</mat-error> -->
 				</mat-form-field>
-	
-				<mat-form-field>
-					<input matInput class="form-control" formControlName="discountLevel" placeholder="Discount Level">
-				</mat-form-field>
+				打折量 0.7 = 7折, 0.25 = 2.5折， 1 = 没折， 0 = 免费"
+				<input type="number" class="form-control" formControlName="discount" step="0.01" max=1 min=0>
+
+				<!-- <mat-form-field> -->
+					<!-- <input matInput class="form-control" formControlName="discount" placeholder="打折量 e.g. 70 = 7折, 25 = 2.5折， 5 = 0.5折"> -->
+				<!-- </mat-form-field> -->
 			</div>
 
 			<div class="col-6">
